docs: rename access-control requirement and fix stale item 8 cross-reference